<resources>
    <string name="facebook_app_id">1021399817971136</string>
    <string name="app_name">GiftCardUp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_my_listing">MY LISTING</string>
    <string name="menu_bulk_listing">BULK LISTING</string>
    <string name="menu_speedy_sell">SPEEDY SELL</string>
    <string name="menu_shipping_center">SHIPPING CENTER</string>
    <string name="menu_available_fund">AVAILABLE FUND</string>
    <string name="menu_withdraw_history">WITHDRAWAL HISTORY</string>
    <string name="menu_recommend_brand">RECOMMEND BRAND</string>
    <string name="menu_referral_rewards">REFERRAL REWARDS</string>
    <string name="menu_my_order">MY ORDERS</string>
    <string name="menu_my_cart">MY CART</string>
    <string name="menu_my_account">MY ACCOUNT</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_login">LOGIN</string>
    <string name="menu_dashboard">BUY GIFT CARDS</string>
    <string name="menu_dashboard_sell">SELL GIFT CARDS</string>
    <string name="sign_up_name_first">First Name</string>
    <string name="sign_up_name_last">Last Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_mobile_number">Mobile Number</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_password_confirm">Password Confirm</string>
    <string name="sign_up_next">Next</string>
    <string name="sign_up_address">Address</string>
    <string name="sign_up_suite_number">Suite Number</string>
    <string name="sign_up_city">City</string>
    <string name="sign_up_state">State</string>
    <string name="sign_up_zip_code">Zip Code</string>
    <string name="sign_up_company_name">Company Name</string>
    <string name="sign_up_representative_id">Representative ID</string>
    <string name="sign_up_back">back</string>
    <string name="sign_up_create_account">Create Account</string>
    <string name="login_username">USERNAME</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_button">LOGIN</string>
    <string name="login_forgot_password">FORGOT PASSWORD</string>
    <string name="login_sign_up">SIGN UP</string>
    <string name="forgot_old_password">OLD PASSWORD</string>
    <string name="forgot_new_password">NEW PASSWORD</string>
    <string name="forgot_confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="forgot_submit_btn">SUBMIT</string>
    <string name="profile_user_name">USER NAME HERE</string>
    <string name="profile_member_since">MEMBER SINCE :</string>
    <string name="profile_total_sold">TOTAL SOLD</string>
    <string name="profile_total_saving">TOTAL SAVING</string>
    <string name="identification_f_name">FIRST NAME</string>
    <string name="identification_l_name">LAST NAME</string>
    <string name="identification_email">EMAIL</string>
    <string name="identification_city">CITY</string>
    <string name="identification_paypal_id">PAYPAL ID</string>
    <string name="identification_state">STATE</string>
    <string name="identification_phone">PHONE</string>
    <string name="identification_address">ADDRESS</string>
    <string name="identification_suite_no">SUITE NUMBER</string>
    <string name="identification_zip_code">ZIP CODE</string>
    <string name="identification_cmpny_name">COMPANY NAME</string>
    <string name="bank_detail_add_bank_account">ADD BANK ACCOUNT</string>
    <string name="bank_info_name">BANK NAME</string>
    <string name="bank_info_routing_no">ROUTING NUMBER</string>
    <string name="bank_info_account_no">ACCOUNT NUMBER</string>
    <string name="bank_info_status">STATUS</string>
    <string name="bank_info_save_btn">SAVE</string>
    <string name="bank_info_cancel_btn">CANCEL</string>
    <string name="approved_for_sell">BECOME APPROVED FOR SELLING</string>
    <string name="enter_ssn_ein">SSN/EIN</string>
    <string name="ssn_ein_next_btn">NEXT</string>
    <string name="ssn_ein_identification_pic">UPLOAD YOUR IDENTIFICATION IMAGE</string>
    <string name="ssn_ein_id_type">ID TYPE</string>
    <string name="id_type_ssn">SSN</string>
    <string name="id_type_ein">EIN</string>
    <string name="buy_card_check_balance">CHECK BALANCE</string>
    <string name="check_balance_by_phone">BY PHONE :</string>
    <string name="check_balance_online">ONLINE :</string>
    <string name="check_balance_in_store">IN STORE :</string>
    <string name="buy_card_about_this_brand">ABOUT THIS BRAND</string>
    <string name="about_brand_text">AMAZING TARGET</string>
    <string name="sell_card_merchant">MERCHANT</string>
    <string name="sell_card_value">VALUE</string>
    <string name="sell_card_get_offer_btn">GET OFFER</string>
    <string name="sell_card_accept_offer_btn">ACCEPT OFFER</string>
    <string name="speedy_cell_text">SPEEDY CELL</string>
    <string name="speedy_cell_cancel_btn">CANCEL</string>
    <string name="speedy_cell_submit_btn">SUBMIT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_account">My Account</string>
    <string-array name="merchant_array">
        <item>Tata</item>
        <item>Tiscon</item>
        <item>Tata</item>
    </string-array>
    <string-array name="month">
        <item>MM</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="date_arr">
        <item>DD</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>