<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/ssn_ein_upload_identification_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_fill_background"
        android:padding="@dimen/button_margin_left"
        android:text="@string/ssn_ein_identification_pic"
        android:textAllCaps="true"
        android:textColor="@color/button_foreground" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/edit_text_hint_text">

        <EditText
            android:id="@+id/ssn_ein_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_ssn_ein"
            android:inputType="text"
            android:textAllCaps="true"
            android:textColor="@color/edit_text_text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssn_ein_id_type"
            android:textAllCaps="true"
            android:layout_marginLeft="10dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_type_ssn"
                    android:textColor="@color/edit_text_text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_type_ein"
                    android:layout_marginLeft="@dimen/radio_button_margin_left"
                    android:textColor="@color/edit_text_text"/>
            </RadioGroup>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:padding="@dimen/button_margin_left">

        <Button
            android:id="@+id/ssn_ein_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_fill_background"
            android:padding="@dimen/button_margin_left"
            android:text="@string/ssn_ein_next_btn"
            android:textAllCaps="true"
            android:textColor="@color/button_foreground" />
    </RelativeLayout>

</LinearLayout>