<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SpeedySell">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedy_cell_text"
                android:textAllCaps="true"
                android:textColor="@color/app_background"
                android:layout_marginTop="@dimen/text_view_text_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/text_view_text_size"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

                <TableLayout
                    android:id="@+id/speedy_cell_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"></TableLayout>
            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/speedy_cell_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speedy_cell_cancel_btn"
                    android:layout_marginLeft="@dimen/btn_left_margin"
                    android:background="@drawable/button_fill_background"
                    android:textAllCaps="true"
                    android:textColor="@color/button_foreground"/>
                <Button
                    android:id="@+id/speedy_cell_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speedy_cell_submit_btn"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:background="@drawable/button_fill_background"
                    android:textAllCaps="true"
                    android:textColor="@color/button_foreground"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
